--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,13 +1,13 @@
-<h1>Hello, Ember!</h1>
-
-<calcite-button icon-end="banana" {{on "click" (fn (mut this.showModal) true)}}>Open Modal</calcite-button>
-
-<calcite-modal aria-labelledby="modal-title" disable-close-button active={{this.showModal}}>
-  <h3 slot="header" id="modal-title">Are you happy?</h3>
-  <div slot="content">
-    Because it works!
-  </div>
-  <calcite-button slot="secondary" width="full" appearance="outline" {{on "click" (fn (mut this.showModal) false)}}>
-    Cancel
+<p>
+  <calcite-button {{on 'click' this.seedValueWithFocusShift}}>
+    <span>Seed value <em>with</em> focus shift</span>
   </calcite-button>
-</calcite-modal>
+</p>
+
+<calcite-label>
+	Seeded value
+	<calcite-input
+    id="seeded"
+    value={{this.seededValue}}
+    {{on 'calciteInputChange' this.didChangeSeededInput}}></calcite-input>
+</calcite-label>
